// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`label variations render extra large label 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Array [
      Object {
        "backgroundColor": "#7076B5",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderRadius": 8,
          "elevation": 4,
          "flexDirection": "row",
          "marginHorizontal": 16,
          "marginVertical": 8,
          "shadowColor": "#000000",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.3,
          "shadowRadius": 2,
        },
        Array [
          Object {
            "borderRadius": 0,
            "flexDirection": "column",
            "marginHorizontal": 0,
            "marginVertical": 0,
            "position": "relative",
            "shadowOpacity": 0,
          },
          Object {
            "backgroundColor": "#7076B5",
          },
        ],
      ]
    }
  >
    <RCTSafeAreaView
      emulateUnlessSupported={true}
      style={
        Object {
          "backgroundColor": "transparent",
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "flexDirection": "row",
              "height": 56,
              "paddingTop": 0,
            },
            Object {
              "backgroundColor": "transparent",
              "width": "100%",
            },
            null,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "paddingLeft": 5,
              },
              Object {
                "alignItems": "flex-start",
                "flex": 1,
                "justifyContent": "center",
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "flex-start",
                  "alignSelf": "flex-start",
                  "justifyContent": "center",
                },
                undefined,
              ]
            }
          >
            <View
              accessible={true}
              focusable={true}
              isTVSelectable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
              testID="IconButton"
            >
              <View
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                    },
                    null,
                    Object {},
                    null,
                  ]
                }
              >
                <Text
                  allowFontScaling={false}
                  style={
                    Array [
                      Object {
                        "color": undefined,
                        "fontSize": 12,
                      },
                      Array [
                        Object {
                          "color": "#ffffff",
                        },
                        Object {
                          "fontSize": 18,
                        },
                        Array [
                          Object {
                            "margin": 10,
                          },
                          Object {},
                        ],
                      ],
                      Object {
                        "fontFamily": "icomoon",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  
                </Text>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            Array [
              Object {},
              Object {
                "alignItems": "center",
                "flex": 4,
                "justifyContent": "center",
              },
            ]
          }
        >
          <Text
            numberOfLines={1}
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Array [
                  Object {
                    "color": "white",
                    "fontSize": 14,
                    "fontWeight": "500",
                  },
                  Object {
                    "fontSize": 14,
                    "fontWeight": "normal",
                    "lineHeight": 20,
                  },
                ],
              ]
            }
          >
            Community Name
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "paddingRight": 5,
              },
              Object {
                "alignItems": "flex-end",
                "flex": 1,
                "justifyContent": "center",
              },
            ]
          }
        />
      </View>
    </RCTSafeAreaView>
    <View
      style={
        Object {
          "alignItems": "center",
          "height": 120,
          "marginBottom": 5,
          "paddingHorizontal": 25,
          "position": "relative",
        }
      }
    >
      <SvgMock
        color="#ffffff"
        height={200}
        style={
          Array [
            Object {
              "marginLeft": -10,
              "marginRight": 10,
            },
            Object {
              "bottom": -60,
              "opacity": 0.4,
              "position": "absolute",
              "right": -40,
            },
          ]
        }
        width={200}
      />
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#ffffff",
              "fontSize": 24,
              "fontWeight": "300",
              "textAlign": "center",
            },
          ]
        }
      >
        God Stories
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#ffffff",
              "fontSize": 14,
              "lineHeight": 20,
              "paddingHorizontal": 35,
              "paddingTop": 10,
              "textAlign": "center",
            },
          ]
        }
      >
        Share and celebrate when God does something amazing.
      </Text>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`label variations renders label with no text 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 18,
        "flexDirection": "row",
        "height": 36,
        "justifyContent": "space-between",
        "paddingLeft": 20,
        "paddingRight": 16,
        "paddingVertical": 0,
      },
      Object {
        "backgroundColor": "#7076B5",
      },
      Object {
        "width": 20,
      },
      null,
    ]
  }
  testID="STORYLabel"
>
  <SvgMock
    color="#ffffff"
    height={20}
    style={
      Array [
        Object {
          "marginLeft": -10,
          "marginRight": 10,
        },
        undefined,
      ]
    }
    width={20}
  />
</View>
`;

exports[`label variations renders label with on press with no text 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
  testID="STORYButton"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderRadius": 0,
          "borderWidth": 0,
          "height": 60,
          "justifyContent": "center",
          "margin": 0,
          "paddingHorizontal": 20,
          "paddingVertical": 10,
        },
        null,
        Array [
          Object {
            "alignItems": "center",
            "borderRadius": 18,
            "flexDirection": "row",
            "height": 36,
            "justifyContent": "space-between",
            "paddingLeft": 20,
            "paddingRight": 16,
            "paddingVertical": 0,
          },
          Object {
            "backgroundColor": "#7076B5",
          },
          null,
          Object {
            "width": 20,
          },
        ],
        Object {
          "borderRadius": 50,
        },
      ]
    }
  >
    <SvgMock
      color="#ffffff"
      height={20}
      style={
        Array [
          Object {
            "marginLeft": -10,
            "marginRight": 10,
          },
          undefined,
        ]
      }
      width={20}
    />
  </View>
</View>
`;

exports[`label variations renders large label 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 18,
        "flexDirection": "row",
        "height": 36,
        "justifyContent": "space-between",
        "paddingLeft": 20,
        "paddingRight": 16,
        "paddingVertical": 0,
      },
      Object {
        "backgroundColor": "#7076B5",
      },
      null,
      Object {
        "height": 48,
      },
    ]
  }
  testID="STORYLabel"
>
  <SvgMock
    color="#ffffff"
    height={24}
    style={
      Array [
        Object {
          "marginLeft": -10,
          "marginRight": 10,
        },
        undefined,
      ]
    }
    width={24}
  />
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Object {
          "color": "#ffffff",
          "fontSize": 14,
          "lineHeight": 20,
        },
      ]
    }
  >
    God Story
  </Text>
</View>
`;

exports[`label variations renders small label with no text 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 18,
        "flexDirection": "row",
        "height": 36,
        "justifyContent": "space-between",
        "paddingLeft": 20,
        "paddingRight": 16,
        "paddingVertical": 0,
      },
      Object {
        "backgroundColor": "#7076B5",
      },
      Object {
        "width": 20,
      },
      Object {
        "alignItems": "center",
        "borderRadius": 12,
        "height": 24,
        "justifyContent": "center",
        "paddingLeft": 0,
        "paddingRight": 0,
        "width": 24,
      },
    ]
  }
  testID="STORYLabel"
>
  <SvgMock
    color="#ffffff"
    height={15}
    style={
      Array [
        Object {
          "marginLeft": 0,
          "marginRight": 0,
        },
        undefined,
      ]
    }
    width={15}
  />
</View>
`;

exports[`post types cards renders Announcement Label 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "flex-start",
      "backgroundColor": "#ffffff",
      "borderRadius": 8,
      "elevation": 4,
      "flex": 1,
      "flexDirection": "column",
      "marginHorizontal": 16,
      "marginVertical": 8,
      "opacity": 1,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 2,
    }
  }
  testID="ANNOUNCEMENTCardWithPeople"
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#505256",
        },
        Object {
          "borderTopLeftRadius": 8,
          "borderTopRightRadius": 8,
          "flexDirection": "row",
          "paddingHorizontal": 12,
          "paddingVertical": 13,
        },
      ]
    }
  >
    <SvgMock
      color="#ffffff"
      height={24}
      style={
        Array [
          Object {
            "marginLeft": -10,
            "marginRight": 10,
          },
          Object {
            "marginLeft": 0,
            "marginRight": 0,
          },
        ]
      }
      width={24}
    />
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "flex-end",
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#ffffff",
        "borderBottomLeftRadius": 8,
        "borderBottomRightRadius": 8,
        "paddingHorizontal": 10,
        "paddingVertical": 5,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "fontSize": 14,
          },
        ]
      }
    >
      Announcements
    </Text>
  </View>
</View>
`;

exports[`post types cards renders Community Need Label 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "flex-start",
      "backgroundColor": "#ffffff",
      "borderRadius": 8,
      "elevation": 4,
      "flex": 1,
      "flexDirection": "column",
      "marginHorizontal": 16,
      "marginVertical": 8,
      "opacity": 1,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 2,
    }
  }
  testID="HELP_REQUESTCardWithPeople"
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#FD726D",
        },
        Object {
          "borderTopLeftRadius": 8,
          "borderTopRightRadius": 8,
          "flexDirection": "row",
          "paddingHorizontal": 12,
          "paddingVertical": 13,
        },
      ]
    }
  >
    <SvgMock
      color="#ffffff"
      height={24}
      style={
        Array [
          Object {
            "marginLeft": -10,
            "marginRight": 10,
          },
          Object {
            "marginLeft": 0,
            "marginRight": 0,
          },
        ]
      }
      width={24}
    />
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "flex-end",
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#ffffff",
        "borderBottomLeftRadius": 8,
        "borderBottomRightRadius": 8,
        "paddingHorizontal": 10,
        "paddingVertical": 5,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "fontSize": 14,
          },
        ]
      }
    >
      Community Needs
    </Text>
  </View>
</View>
`;

exports[`post types cards renders God Story Label 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "flex-start",
      "backgroundColor": "#ffffff",
      "borderRadius": 8,
      "elevation": 4,
      "flex": 1,
      "flexDirection": "column",
      "marginHorizontal": 16,
      "marginVertical": 8,
      "opacity": 1,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 2,
    }
  }
  testID="STORYCardWithPeople"
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#7076B5",
        },
        Object {
          "borderTopLeftRadius": 8,
          "borderTopRightRadius": 8,
          "flexDirection": "row",
          "paddingHorizontal": 12,
          "paddingVertical": 13,
        },
      ]
    }
  >
    <SvgMock
      color="#ffffff"
      height={24}
      style={
        Array [
          Object {
            "marginLeft": -10,
            "marginRight": 10,
          },
          Object {
            "marginLeft": 0,
            "marginRight": 0,
          },
        ]
      }
      width={24}
    />
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "flex-end",
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#ffffff",
        "borderBottomLeftRadius": 8,
        "borderBottomRightRadius": 8,
        "paddingHorizontal": 10,
        "paddingVertical": 5,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "fontSize": 14,
          },
        ]
      }
    >
      God Stories
    </Text>
  </View>
</View>
`;

exports[`post types cards renders On Your Mind Label 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "flex-start",
      "backgroundColor": "#ffffff",
      "borderRadius": 8,
      "elevation": 4,
      "flex": 1,
      "flexDirection": "column",
      "marginHorizontal": 16,
      "marginVertical": 8,
      "opacity": 1,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 2,
    }
  }
  testID="THOUGHTCardWithPeople"
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#B4B6BA",
        },
        Object {
          "borderTopLeftRadius": 8,
          "borderTopRightRadius": 8,
          "flexDirection": "row",
          "paddingHorizontal": 12,
          "paddingVertical": 13,
        },
      ]
    }
  >
    <SvgMock
      color="#ffffff"
      height={24}
      style={
        Array [
          Object {
            "marginLeft": -10,
            "marginRight": 10,
          },
          Object {
            "marginLeft": 0,
            "marginRight": 0,
          },
        ]
      }
      width={24}
    />
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "flex-end",
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#ffffff",
        "borderBottomLeftRadius": 8,
        "borderBottomRightRadius": 8,
        "paddingHorizontal": 10,
        "paddingVertical": 5,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "fontSize": 14,
          },
        ]
      }
    >
      card.THOUGHT
    </Text>
  </View>
</View>
`;

exports[`post types cards renders Prayer Request Label 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "flex-start",
      "backgroundColor": "#ffffff",
      "borderRadius": 8,
      "elevation": 4,
      "flex": 1,
      "flexDirection": "column",
      "marginHorizontal": 16,
      "marginVertical": 8,
      "opacity": 1,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 2,
    }
  }
  testID="PRAYER_REQUESTCardWithPeople"
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#A97398",
        },
        Object {
          "borderTopLeftRadius": 8,
          "borderTopRightRadius": 8,
          "flexDirection": "row",
          "paddingHorizontal": 12,
          "paddingVertical": 13,
        },
      ]
    }
  >
    <SvgMock
      color="#ffffff"
      height={24}
      style={
        Array [
          Object {
            "marginLeft": -10,
            "marginRight": 10,
          },
          Object {
            "marginLeft": 0,
            "marginRight": 0,
          },
        ]
      }
      width={24}
    />
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "flex-end",
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#ffffff",
        "borderBottomLeftRadius": 8,
        "borderBottomRightRadius": 8,
        "paddingHorizontal": 10,
        "paddingVertical": 5,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "fontSize": 14,
          },
        ]
      }
    >
      Prayer Requests
    </Text>
  </View>
</View>
`;

exports[`post types cards renders Spiritual Question Label 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "flex-start",
      "backgroundColor": "#ffffff",
      "borderRadius": 8,
      "elevation": 4,
      "flex": 1,
      "flexDirection": "column",
      "marginHorizontal": 16,
      "marginVertical": 8,
      "opacity": 1,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 2,
    }
  }
  testID="QUESTIONCardWithPeople"
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#FFA178",
        },
        Object {
          "borderTopLeftRadius": 8,
          "borderTopRightRadius": 8,
          "flexDirection": "row",
          "paddingHorizontal": 12,
          "paddingVertical": 13,
        },
      ]
    }
  >
    <SvgMock
      color="#ffffff"
      height={24}
      style={
        Array [
          Object {
            "marginLeft": -10,
            "marginRight": 10,
          },
          Object {
            "marginLeft": 0,
            "marginRight": 0,
          },
        ]
      }
      width={24}
    />
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "flex-end",
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#ffffff",
        "borderBottomLeftRadius": 8,
        "borderBottomRightRadius": 8,
        "paddingHorizontal": 10,
        "paddingVertical": 5,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "fontSize": 14,
          },
        ]
      }
    >
      Spiritual Questions
    </Text>
  </View>
</View>
`;

exports[`post types cards renders Step Of Faith Label 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "flex-start",
      "backgroundColor": "#ffffff",
      "borderRadius": 8,
      "elevation": 4,
      "flex": 1,
      "flexDirection": "column",
      "marginHorizontal": 16,
      "marginVertical": 8,
      "opacity": 1,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 2,
    }
  }
  testID="STEPCardWithPeople"
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#3CC8E6",
        },
        Object {
          "borderTopLeftRadius": 8,
          "borderTopRightRadius": 8,
          "flexDirection": "row",
          "paddingHorizontal": 12,
          "paddingVertical": 13,
        },
      ]
    }
  >
    <SvgMock
      color="#ffffff"
      height={24}
      style={
        Array [
          Object {
            "marginLeft": -10,
            "marginRight": 10,
          },
          Object {
            "marginLeft": 0,
            "marginRight": 0,
          },
        ]
      }
      width={24}
    />
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "flex-end",
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#ffffff",
        "borderBottomLeftRadius": 8,
        "borderBottomRightRadius": 8,
        "paddingHorizontal": 10,
        "paddingVertical": 5,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "fontSize": 14,
          },
        ]
      }
    >
      Steps of Faith
    </Text>
  </View>
</View>
`;

exports[`post types cards renders people 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "flex-start",
      "backgroundColor": "#ffffff",
      "borderRadius": 8,
      "elevation": 4,
      "flex": 1,
      "flexDirection": "column",
      "marginHorizontal": 16,
      "marginVertical": 8,
      "opacity": 1,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 2,
    }
  }
  testID="STEPCardWithPeople"
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#3CC8E6",
        },
        Object {
          "borderTopLeftRadius": 8,
          "borderTopRightRadius": 8,
          "flexDirection": "row",
          "paddingHorizontal": 12,
          "paddingVertical": 13,
        },
      ]
    }
  >
    <SvgMock
      color="#ffffff"
      height={24}
      style={
        Array [
          Object {
            "marginLeft": -10,
            "marginRight": 10,
          },
          Object {
            "marginLeft": 0,
            "marginRight": 0,
          },
        ]
      }
      width={24}
    />
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "flex-end",
        }
      }
    >
      <Image
        resizeMode="cover"
        source={
          Object {
            "uri": "alias consequuntur corporis",
          }
        }
        style={
          Array [
            Object {
              "borderColor": "#ffffff",
              "borderRadius": 12,
              "borderWidth": 1,
              "height": 24,
              "width": 24,
            },
            Object {
              "backgroundColor": "rgb(154, 199, 115)",
            },
            Object {
              "marginLeft": -12,
            },
          ]
        }
      />
      <Image
        resizeMode="cover"
        source={
          Object {
            "uri": "qui amet iure",
          }
        }
        style={
          Array [
            Object {
              "borderColor": "#ffffff",
              "borderRadius": 12,
              "borderWidth": 1,
              "height": 24,
              "width": 24,
            },
            Object {
              "backgroundColor": "rgb(161, 123, 130)",
            },
            Object {
              "marginLeft": -12,
            },
          ]
        }
      />
      <Image
        resizeMode="cover"
        source={
          Object {
            "uri": "ut nulla quam",
          }
        }
        style={
          Array [
            Object {
              "borderColor": "#ffffff",
              "borderRadius": 12,
              "borderWidth": 1,
              "height": 24,
              "width": 24,
            },
            Object {
              "backgroundColor": "rgb(152, 55, 155)",
            },
            Object {
              "marginLeft": -12,
            },
          ]
        }
      />
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
            Array [
              Object {
                "borderColor": "#ffffff",
                "borderRadius": 12,
                "borderWidth": 1,
                "height": 24,
                "width": 24,
              },
              Object {
                "backgroundColor": "#B4B6BA",
              },
              Array [
                Object {
                  "backgroundColor": "#3CC8E6",
                },
                Object {
                  "marginLeft": -12,
                },
              ],
            ],
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Array [
                Object {
                  "color": "#ffffff",
                },
                Object {
                  "fontSize": 12,
                },
              ],
            ]
          }
        >
          +3
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#ffffff",
        "borderBottomLeftRadius": 8,
        "borderBottomRightRadius": 8,
        "paddingHorizontal": 10,
        "paddingVertical": 5,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "fontSize": 14,
          },
        ]
      }
    >
      Steps of Faith
    </Text>
  </View>
</View>
`;

exports[`post types cards renders people with count only 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "flex-start",
      "backgroundColor": "#ffffff",
      "borderRadius": 8,
      "elevation": 4,
      "flex": 1,
      "flexDirection": "column",
      "marginHorizontal": 16,
      "marginVertical": 8,
      "opacity": 1,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 2,
    }
  }
  testID="STEPCardWithPeople"
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#3CC8E6",
        },
        Object {
          "borderTopLeftRadius": 8,
          "borderTopRightRadius": 8,
          "flexDirection": "row",
          "paddingHorizontal": 12,
          "paddingVertical": 13,
        },
      ]
    }
  >
    <SvgMock
      color="#ffffff"
      height={24}
      style={
        Array [
          Object {
            "marginLeft": -10,
            "marginRight": 10,
          },
          Object {
            "marginLeft": 0,
            "marginRight": 0,
          },
        ]
      }
      width={24}
    />
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "flex-end",
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
            Array [
              Object {
                "borderColor": "#ffffff",
                "borderRadius": 12,
                "borderWidth": 1,
                "height": 24,
                "width": 24,
              },
              Object {
                "backgroundColor": "#B4B6BA",
              },
              Array [
                Object {
                  "backgroundColor": "#3CC8E6",
                },
                Object {
                  "marginLeft": -12,
                },
              ],
            ],
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Array [
                Object {
                  "color": "#ffffff",
                },
                Object {
                  "fontSize": 12,
                },
              ],
            ]
          }
        >
          +6
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#ffffff",
        "borderBottomLeftRadius": 8,
        "borderBottomRightRadius": 8,
        "paddingHorizontal": 10,
        "paddingVertical": 5,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "fontSize": 14,
          },
        ]
      }
    >
      Steps of Faith
    </Text>
  </View>
</View>
`;

exports[`post types null states renders Announcement Null State 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "justifyContent": "center",
      "marginTop": 100,
      "paddingHorizontal": 45,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Object {
          "color": "#B4B6BA",
          "fontSize": 32,
          "fontWeight": "300",
          "marginBottom": 20,
          "textAlign": "center",
        },
      ]
    }
  >
    He who abides by announcements will be blessed.
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontSize": 16,
            "fontWeight": "bold",
          },
        ],
      ]
    }
  >
    ANONYMOUS
  </Text>
</View>
`;

exports[`post types null states renders Community Need Null State 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "justifyContent": "center",
      "marginTop": 100,
      "paddingHorizontal": 45,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Object {
          "color": "#B4B6BA",
          "fontSize": 32,
          "fontWeight": "300",
          "marginBottom": 20,
          "textAlign": "center",
        },
      ]
    }
  >
    Share one another's burdens.
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Array [
          Object {
            "color": "#FD726D",
          },
          Object {
            "fontSize": 16,
            "fontWeight": "bold",
          },
        ],
      ]
    }
  >
    GALATIANS 6:2
  </Text>
</View>
`;

exports[`post types null states renders God Story Null State 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "justifyContent": "center",
      "marginTop": 100,
      "paddingHorizontal": 45,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Object {
          "color": "#B4B6BA",
          "fontSize": 32,
          "fontWeight": "300",
          "marginBottom": 20,
          "textAlign": "center",
        },
      ]
    }
  >
    Spur one another on toward love and good deeds.
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Array [
          Object {
            "color": "#7076B5",
          },
          Object {
            "fontSize": 16,
            "fontWeight": "bold",
          },
        ],
      ]
    }
  >
    HEBREWS 10:24
  </Text>
</View>
`;

exports[`post types null states renders On Your Mind Null State 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "justifyContent": "center",
      "marginTop": 100,
      "paddingHorizontal": 45,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Object {
          "color": "#B4B6BA",
          "fontSize": 32,
          "fontWeight": "300",
          "marginBottom": 20,
          "textAlign": "center",
        },
      ]
    }
  >
    Where two or three are gathered in my name, there am I among them.
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Array [
          Object {
            "color": "#B4B6BA",
          },
          Object {
            "fontSize": 16,
            "fontWeight": "bold",
          },
        ],
      ]
    }
  >
    MATTHEW 18:20
  </Text>
</View>
`;

exports[`post types null states renders Prayer Request Null State 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "justifyContent": "center",
      "marginTop": 100,
      "paddingHorizontal": 45,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Object {
          "color": "#B4B6BA",
          "fontSize": 32,
          "fontWeight": "300",
          "marginBottom": 20,
          "textAlign": "center",
        },
      ]
    }
  >
    Let your requests be known to God.
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Array [
          Object {
            "color": "#A97398",
          },
          Object {
            "fontSize": 16,
            "fontWeight": "bold",
          },
        ],
      ]
    }
  >
    PHILIPPIANS 4:6
  </Text>
</View>
`;

exports[`post types null states renders Spiritual Question Null State 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "justifyContent": "center",
      "marginTop": 100,
      "paddingHorizontal": 45,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Object {
          "color": "#B4B6BA",
          "fontSize": 32,
          "fontWeight": "300",
          "marginBottom": 20,
          "textAlign": "center",
        },
      ]
    }
  >
    Teach and counsel each other with all the wisdom he gives.
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Array [
          Object {
            "color": "#FFA178",
          },
          Object {
            "fontSize": 16,
            "fontWeight": "bold",
          },
        ],
      ]
    }
  >
    COLOSSIANS 3:16
  </Text>
</View>
`;

exports[`post types null states renders Step Of Faith Null State 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "justifyContent": "center",
      "marginTop": 100,
      "paddingHorizontal": 45,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Object {
          "color": "#B4B6BA",
          "fontSize": 32,
          "fontWeight": "300",
          "marginBottom": 20,
          "textAlign": "center",
        },
      ]
    }
  >
    Encourage one another and build each other up.
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Array [
          Object {
            "color": "#3CC8E6",
          },
          Object {
            "fontSize": 16,
            "fontWeight": "bold",
          },
        ],
      ]
    }
  >
    1 THESSALONIANS 5:11
  </Text>
</View>
`;

exports[`post types renders Announcement Label 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 18,
        "flexDirection": "row",
        "height": 36,
        "justifyContent": "space-between",
        "paddingLeft": 20,
        "paddingRight": 16,
        "paddingVertical": 0,
      },
      Object {
        "backgroundColor": "#505256",
      },
      null,
      null,
    ]
  }
  testID="ANNOUNCEMENTLabel"
>
  <SvgMock
    color="#ffffff"
    height={20}
    style={
      Array [
        Object {
          "marginLeft": -10,
          "marginRight": 10,
        },
        undefined,
      ]
    }
    width={20}
  />
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Object {
          "color": "#ffffff",
          "fontSize": 14,
          "lineHeight": 20,
        },
      ]
    }
  >
    Announcement
  </Text>
</View>
`;

exports[`post types renders Community Need Label 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 18,
        "flexDirection": "row",
        "height": 36,
        "justifyContent": "space-between",
        "paddingLeft": 20,
        "paddingRight": 16,
        "paddingVertical": 0,
      },
      Object {
        "backgroundColor": "#FD726D",
      },
      null,
      null,
    ]
  }
  testID="HELP_REQUESTLabel"
>
  <SvgMock
    color="#ffffff"
    height={20}
    style={
      Array [
        Object {
          "marginLeft": -10,
          "marginRight": 10,
        },
        undefined,
      ]
    }
    width={20}
  />
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Object {
          "color": "#ffffff",
          "fontSize": 14,
          "lineHeight": 20,
        },
      ]
    }
  >
    Community Need
  </Text>
</View>
`;

exports[`post types renders God Story Label 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 18,
        "flexDirection": "row",
        "height": 36,
        "justifyContent": "space-between",
        "paddingLeft": 20,
        "paddingRight": 16,
        "paddingVertical": 0,
      },
      Object {
        "backgroundColor": "#7076B5",
      },
      null,
      null,
    ]
  }
  testID="STORYLabel"
>
  <SvgMock
    color="#ffffff"
    height={20}
    style={
      Array [
        Object {
          "marginLeft": -10,
          "marginRight": 10,
        },
        undefined,
      ]
    }
    width={20}
  />
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Object {
          "color": "#ffffff",
          "fontSize": 14,
          "lineHeight": 20,
        },
      ]
    }
  >
    God Story
  </Text>
</View>
`;

exports[`post types renders On Your Mind Label 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 18,
        "flexDirection": "row",
        "height": 36,
        "justifyContent": "space-between",
        "paddingLeft": 20,
        "paddingRight": 16,
        "paddingVertical": 0,
      },
      Object {
        "backgroundColor": "#B4B6BA",
      },
      null,
      null,
    ]
  }
  testID="THOUGHTLabel"
>
  <SvgMock
    color="#ffffff"
    height={20}
    style={
      Array [
        Object {
          "marginLeft": -10,
          "marginRight": 10,
        },
        undefined,
      ]
    }
    width={20}
  />
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Object {
          "color": "#ffffff",
          "fontSize": 14,
          "lineHeight": 20,
        },
      ]
    }
  >
    What's on Your Mind
  </Text>
</View>
`;

exports[`post types renders Prayer Request Label 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 18,
        "flexDirection": "row",
        "height": 36,
        "justifyContent": "space-between",
        "paddingLeft": 20,
        "paddingRight": 16,
        "paddingVertical": 0,
      },
      Object {
        "backgroundColor": "#A97398",
      },
      null,
      null,
    ]
  }
  testID="PRAYER_REQUESTLabel"
>
  <SvgMock
    color="#ffffff"
    height={20}
    style={
      Array [
        Object {
          "marginLeft": -10,
          "marginRight": 10,
        },
        undefined,
      ]
    }
    width={20}
  />
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Object {
          "color": "#ffffff",
          "fontSize": 14,
          "lineHeight": 20,
        },
      ]
    }
  >
    Prayer Request
  </Text>
</View>
`;

exports[`post types renders Spiritual Question Label 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 18,
        "flexDirection": "row",
        "height": 36,
        "justifyContent": "space-between",
        "paddingLeft": 20,
        "paddingRight": 16,
        "paddingVertical": 0,
      },
      Object {
        "backgroundColor": "#FFA178",
      },
      null,
      null,
    ]
  }
  testID="QUESTIONLabel"
>
  <SvgMock
    color="#ffffff"
    height={20}
    style={
      Array [
        Object {
          "marginLeft": -10,
          "marginRight": 10,
        },
        undefined,
      ]
    }
    width={20}
  />
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Object {
          "color": "#ffffff",
          "fontSize": 14,
          "lineHeight": 20,
        },
      ]
    }
  >
    Spiritual Question
  </Text>
</View>
`;

exports[`post types renders Step Of Faith Label 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 18,
        "flexDirection": "row",
        "height": 36,
        "justifyContent": "space-between",
        "paddingLeft": 20,
        "paddingRight": 16,
        "paddingVertical": 0,
      },
      Object {
        "backgroundColor": "#3CC8E6",
      },
      null,
      null,
    ]
  }
  testID="STEPLabel"
>
  <SvgMock
    color="#ffffff"
    height={20}
    style={
      Array [
        Object {
          "marginLeft": -10,
          "marginRight": 10,
        },
        undefined,
      ]
    }
    width={20}
  />
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Object {
          "color": "#ffffff",
          "fontSize": 14,
          "lineHeight": 20,
        },
      ]
    }
  >
    Step of Faith
  </Text>
</View>
`;

exports[`renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 18,
        "flexDirection": "row",
        "height": 36,
        "justifyContent": "space-between",
        "paddingLeft": 20,
        "paddingRight": 16,
        "paddingVertical": 0,
      },
      Object {
        "backgroundColor": "#7076B5",
      },
      null,
      null,
    ]
  }
  testID="STORYLabel"
>
  <SvgMock
    color="#ffffff"
    height={20}
    style={
      Array [
        Object {
          "marginLeft": -10,
          "marginRight": 10,
        },
        undefined,
      ]
    }
    width={20}
  />
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Object {
          "color": "#ffffff",
          "fontSize": 14,
          "lineHeight": 20,
        },
      ]
    }
  >
    God Story
  </Text>
</View>
`;

exports[`renders pressable correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
  testID="STORYButton"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderRadius": 0,
          "borderWidth": 0,
          "height": 60,
          "justifyContent": "center",
          "margin": 0,
          "paddingHorizontal": 20,
          "paddingVertical": 10,
        },
        null,
        Array [
          Object {
            "alignItems": "center",
            "borderRadius": 18,
            "flexDirection": "row",
            "height": 36,
            "justifyContent": "space-between",
            "paddingLeft": 20,
            "paddingRight": 16,
            "paddingVertical": 0,
          },
          Object {
            "backgroundColor": "#7076B5",
          },
          null,
          null,
        ],
        Object {
          "borderRadius": 50,
        },
      ]
    }
  >
    <SvgMock
      color="#ffffff"
      height={20}
      style={
        Array [
          Object {
            "marginLeft": -10,
            "marginRight": 10,
          },
          undefined,
        ]
      }
      width={20}
    />
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#ffffff",
            "fontSize": 14,
            "lineHeight": 20,
          },
        ]
      }
    >
      God Story
    </Text>
  </View>
</View>
`;
